--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,14 +2,20 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="vasyliev.android.yotubemusic">
 
+    <permission
+        android:name="vasyliev.android.yotubemusic.PRIVATE"
+        android:protectionLevel="signature" />
+    <uses-permission android:name="vasyliev.android.yotubemusic.PRIVATE" />
+
     <application
+        android:name=".YoTubeMusicApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".SecondActivity"></activity>
+        <activity android:name=".SecondActivity" />
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
