--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,7 +33,7 @@
             android:exported="true" />
 
         <service
-            android:name=".service.MainActivityService"
+            android:name=".service.MusicPlayerService"
             android:enabled="true" />
     </application>
 
